2024-02-07T08:08:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7811718221 # 94
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 1 29
* notice: prev accum: outdated-unq outdated-all / unq all: 321 670 / 335 699
* notice: next accum: outdated-unq outdated-all / unq all: 321 670 / 336 700
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-24 2024-02-07]

2024-02-07T00:28:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7808047878 # 93
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 1 29
* notice: prev accum: outdated-unq outdated-all / unq all: 321 670 / 335 698
* notice: next accum: outdated-unq outdated-all / unq all: 321 670 / 335 699
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-06]

2024-02-06T16:07:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7802613652 # 92
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-06
* notice: last 14d: unq all: 1 28
* notice: prev accum: outdated-unq outdated-all / unq all: 319 667 / 335 698
* notice: next accum: outdated-unq outdated-all / unq all: 321 670 / 335 698
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-23] / []

2024-02-06T08:09:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7796518855 # 91