@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-07T08:08:12Z",
-  "count_outdated" : 670,
-  "uniques_outdated" : 321,
+  "timestamp" : "2024-02-07T16:09:25Z",
+  "count_outdated" : 672,
+  "uniques_outdated" : 322,
   "count" : 700,
   "uniques" : 336,
   "clones" : [
-    {
-      "timestamp": "2024-01-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-25T00:00:00Z",
       "count": 2,
