@@ -1,12 +1,7 @@
 {
-  "count": 29,
+  "count": 28,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-01-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-25T00:00:00Z",
       "count": 2,
