@@ -1,3 +1,12 @@
+2024-02-07T16:09:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7817719941 # 95
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
+* notice: last 14d: unq all: 1 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 321 670 / 336 700
+* notice: next accum: outdated-unq outdated-all / unq all: 322 672 / 336 700
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-24] / []
+
 2024-02-07T08:08:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7811718221 # 94
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
